test/ddc-main/51-Lite/T253-RedefinedTopBind/Main.error.check
Error loading module
  When checking expression.
    test/ddc-main/51-Lite/T253-RedefinedTopBind/Main.dcl:6:6
    Redefined binder 'main : [r : Region].Ptr# r String# -> Int#' in letrec.
    
    with: letrec {
            main : [r : Region].Ptr# r String# -> Int#
              = /\(r : Region).
                 \(x : Ptr# r String#). 5i#;
            
            main : [r : Region].Ptr# r String# -> Int#
              = /\(r : Region).
                 \(x : Ptr# r String#). 2i#
          } in
          ()
